# openspec-gf

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: db.rs  handlers.rs  main.rs  models.rs
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: helpers.ts  user-journeys.spec.ts
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: auth.test.ts  auth.ts  hello-world.test.ts  hello-world.ts  kudo-card.test.ts  kudo-card.ts  kudos-stream.test.ts  kudos-stream.ts  main.test.ts  main.ts  services.test.ts  services.ts  types.ts  utils.test.ts  utils.ts
openspec/changes/archive/2026-04-15-kudos-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-kudos-app/specs/query-auth/: spec.md
openspec/changes/archive/2026-04-15-kudos-app/specs/user-profiles/: spec.md
openspec/changes/archive/2026-04-15-kudos-app/specs/web-ui-personalization/: spec.md
openspec/changes/kudos-app/: design.md  tasks.md
openspec/changes/kudos-app/specs/user-profiles/: spec.md
openspec/changes/kudos-app/specs/web-ui-personalization/: spec.md
openspec/changes/kudos-stream/: design.md  proposal.md  tasks.md
openspec/changes/kudos-stream/specs/kudos-data-model/: spec.md
openspec/changes/kudos-stream/specs/kudos-retrieval-api/: spec.md
openspec/changes/kudos-stream/specs/kudos-stream-ui/: spec.md
openspec/specs/query-auth/: spec.md
openspec/specs/user-profiles/: spec.md
openspec/specs/web-ui-personalization/: spec.md
