[package]
name = "kudos-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tower = "0.5"
